[package]
name = "budget-tracker"
version = "0.4.1"
edition = "2021"
description = "A TUI based budget tracker"
license = "MIT"
authors = ["Adarsh Das adarshdas950@gmail.com"]
documentation = "https://docs.rs/budget-tracker"
readme = "README.md"
repository = "https://github.com/Saphereye/budget-tracker"
keywords = ["budget", "personal-finance"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
fuzzy-matcher = "0.3.7"
ratatui = "0.26.3"
serde = { version = "1.0.202", features = ["derive"] }
